# 2DPrototypes

./: .gitignore  .gitmodules  README.md
2DCellularLighting/: Makefile  README.md  main.cpp
2DCellularLightingRaylib/: CMakeLists.txt  Makefile  README.md
2DCellularLightingRaylib/src/: main.cpp
2DShadowTransformation/: CMakeLists.txt  Makefile  README.md  main.cpp
2DShadowTransformation/src/: main.cpp
